JS repairs
+ fixed page not showing on FF Android (removed <body> class property)
+ scrolling doesn't animate anymore (looks better)
+ fixed bootstrap tooltips (move to top of head)

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -1,4 +1,4 @@
-body.ad-background {
+body {
   background-image: url("/images/driver-at-the-wheel.jpg");
   background-repeat: no-repeat;
   background-position-x: 18%;
